<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2023-2024 Eugene Terekhov
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.jcabi</groupId>
    <artifactId>parent</artifactId>
    <version>0.67.0</version>
  </parent>

  <groupId>io.github.nergal-perm</groupId>
  <artifactId>java-decita</artifactId>
  <version>0.3.0</version>
  <packaging>jar</packaging>

  <name>Java Decision Tables</name>
  <description>Decision Tables calculation engine</description>
  <url>https://nergal-perm.github.io/java-decita/</url>
  <inceptionYear>2023</inceptionYear>
  <organization>
    <name>Eugene Terekhov</name>
    <url>https://github.com/nergal-perm</url>
  </organization>
  <licenses>
    <license>
      <name>MIT</name>
      <url>https://raw.githubusercontent.com/nergal-perm/java-decita/master/LICENSE</url>
      <distribution>site</distribution>
      <comments>MIT License</comments>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>1</id>
      <name>Eugene Terekhov</name>
      <email>nergal@psu.ru</email>
      <url>https://github.com/nergal-perm</url>
      <roles>
        <role>Architect</role>
        <role>Developer</role>
      </roles>
      <timezone>+4</timezone>
    </developer>
  </developers>
  <contributors>
    <contributor>
      <name>Nikita Batin</name>
      <url>https://github.com/citerm</url>
      <roles>
        <role>Architect</role>
      </roles>
      <timezone>+3</timezone>
    </contributor>
  </contributors>

  <issueManagement>
    <system>github</system>
    <url>https://github.com/nergal-perm/java-decita/issues</url>
  </issueManagement>
  <ciManagement>
    <system>github</system>
    <url>https://github.com/nergal-perm/java-decita/actions</url>
  </ciManagement>
  <scm>
    <connection>scm:git:github.com:nergal-perm/java-decita.git</connection>
    <developerConnection>scm:git:github.com:nergal-perm/java-decita.git</developerConnection>
    <url>https://github.com/nergal-perm/java-decita</url>
  </scm>

  <distributionManagement>
    <downloadUrl>https://github.com/nergal-perm/java-decita/packages/</downloadUrl>
    <repository>
      <id>github</id>
      <name>GitHub nergal-perm Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/nergal-perm/java-decita</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <snapshotRepository>
      <id>Github packages</id>
    </snapshotRepository>
    <site>
      <id>github.io</id>
      <url>https://nergal-perm.github.io/java-decita</url>
    </site>
  </distributionManagement>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <version>2.2</version>
    </dependency>
    <dependency>
      <groupId>com.jcabi</groupId>
      <artifactId>jcabi-matchers</artifactId>
      <version>1.7.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jline</groupId>
      <artifactId>jline</artifactId>
      <version>3.25.0</version>
    </dependency>
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>2.0</version>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.24.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>newSonatype</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-source-plugin</artifactId>
            <executions>
              <execution>
                <id>jcabi-sources</id>
                <configuration>
                  <forceCreation>true</forceCreation>
                </configuration>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-javadoc-plugin</artifactId>
            <executions>
              <execution>
                <id>jcabi-javadoc</id>
                <phase>package</phase>
                <goals>
                  <goal>jar</goal>
                </goals>
                <configuration>
                  <additionalOptions>${javadoc.opts}</additionalOptions>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.4.0</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <tokenAuth>true</tokenAuth>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>qulice</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.qulice</groupId>
            <artifactId>qulice-maven-plugin</artifactId>
            <version>0.22.2</version>
            <configuration>
              <license>file:${basedir}/LICENSE</license>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>site</id>
      <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-project-info-reports-plugin</artifactId>
            <reportSets>
              <reportSet>
                <reports>
                  <report>summary</report>
                  <report>scm</report>
                  <report>team</report>
                  <report>dependencies</report>
                  <report>plugins</report>
                </reports>
              </reportSet>
            </reportSets>
          </plugin>
        </plugins>
      </reporting>
    </profile>
  </profiles>
</project>